--- a/css/lyrically.css
+++ b/css/lyrically.css
@@ -30,7 +30,7 @@
     :root {
         --fs-h1: 4.5rem;
         --fs-h2: 3.75rem;
-        --fs-h3: 1.5rem;
+        --fs-h3: 2rem;
         --fs-body: 1.125rem;
     }
 }
@@ -307,3 +307,61 @@ header {
 }
 
 /* Project */
+
+
+.proj-header {
+    background-color: rgb(61, 61, 61);
+    width: 100%;
+    color: white; 
+    padding: 2rem;
+    text-align: center;
+ }
+ 
+ .role-container {
+     display: flex;
+     flex-direction: column;
+ }
+ 
+ .mock-container{
+     display: grid;
+     grid-template-columns: repeat(autofit, minmax(300px, 1fr));
+ }
+ 
+
+
+ section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
+
+ .research-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+ }
+ 
+ .research-col {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1rem;
+ }
+
+
+
+ .interview-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+ }
+
+ h2 {
+    color: rgb(248, 247, 247);
+    box-shadow: 10px 10px 10px;
+    margin: 1rem;
+    padding: 1rem;
+    background-color: grey;
+ }
+
+ h3 {
+    margin: 1rem;
+ }
