styles added to home page

--- a/css/lyrically.css
+++ b/css/lyrically.css
@@ -15,7 +15,7 @@
 
     --clr-light: #fff;
     --clr-dark: #303030;
-    --clr-accent: #16e0bd;
+    --clr-accent: #000000;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
@@ -134,12 +134,7 @@ h3 {
     padding: .25em 1em;
     font-family: var(--ff-secondary);
     margin-bottom: 1em;
-}
-
-.section__subtitle--work {
-    color: var(--clr-accent);
-    font-weight: var(--fw-bold);
-    margin-bottom: 2em;
+    color: #fc0;
 }
 
 /* header */
