--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ strong {
     display: inline-block;
     padding: .5em 2.5em;
     background: var(--clr-orange);
-    color: var(--clr-dark);
+    color: black;
     text-decoration: none;
     cursor: pointer;
     font-size: .8rem;
