--- a/css/lyrically.css
+++ b/css/lyrically.css
@@ -16,6 +16,11 @@
     --clr-light: #fff;
     --clr-dark: #303030;
     --clr-accent: #000000;
+    --clr-olive: #9bc1bc;
+    --clr-purple: #5d576b;
+    --clr-offwhite: #e6ebe0;
+    --clr-orange: #ed6a5a;
+    --clr-yellow:#f4f1bb;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
@@ -43,7 +48,7 @@ html {
 }
 
 body {
-    background: var(--clr-light);
+    background: var(--clr-olive);
     color: var(--clr-dark);
     margin: 0;
     font-family: var(--ff-primary);
@@ -65,7 +70,7 @@ strong {
 }
 
 :focus {
-    outline: 3px solid var(--clr-accent);
+    outline: 3px solid var(--clr-orange);
     outline-offset: 3px;
 }
 
@@ -74,8 +79,8 @@ strong {
 .btn {
     display: inline-block;
     padding: .5em 2.5em;
-    background: var(--clr-accent);
-    color: var(--clr-dark);
+    background: var(--clr-orange);
+    color: black;
     text-decoration: none;
     cursor: pointer;
     font-size: .8rem;
@@ -143,6 +148,7 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 1em;
+    background-color: var(--clr-purple);
 }
 
 .logo {
@@ -182,7 +188,7 @@ header {
 }
 
 .nav__link:hover {
-    color: var(--clr-accent);
+    color: var(--clr-orange);
 }
 
 .nav-toggle {
@@ -229,7 +235,7 @@ header {
 .hamburger,
 .hamburger::before,
 .hamburger::after {
-    background: var(--clr-accent);
+    background: var(--clr-orange);
     width: 2em;
     height: 3px;
     border-radius: 1em;
@@ -260,7 +266,7 @@ header {
 
 .footer {
     background: #111;
-    color: var(--clr-accent);
+    color: var(--clr-yellow);
     text-align: center;
     padding: 2.5em 0;
     font-size: var(--fs-h3);
@@ -305,7 +311,6 @@ header {
 
 
 .proj-header {
-    background-color: rgb(61, 61, 61);
     width: 100%;
     color: white; 
     padding: 2rem;
