--- a/css/lyrically.css
+++ b/css/lyrically.css
@@ -477,3 +477,10 @@ header {
             height: auto;
         }
     }
+
+    .img-mockup {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-column-gap: 1rem;
+      grid-row-gap: 1rem;
+    }
