--- a/css/cake.css
+++ b/css/cake.css
@@ -330,150 +330,45 @@ header {
     text-align: center;
 }
 
-.role-container {
-    display: flex;
-    flex-direction: column;
-}
-
-
-@media (min-width: 600px) {
-    .intro-container {
-        display: flex;
-        width: min-content;
-        margin: 1rem;
-        grid-column-gap: 1rem;
-        grid-template-areas:
-            "img title"
-            "img subtitle";
-        grid-template-columns: min-content;
-        align-items: center;
-
-
-    }
-
-    .intro2-section {
-        position: relative;
-        background-color: var(--clr-purple);
-        color: #fff;
-    }
-
-
-    .mockup1-img {
-        grid-area: img;
-        min-width: 600px;
-        position: relative;
-
-    }
-
+  
     section {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 
-    .design-proc {
-        border: 1px solid var(--clr-dark);
-        background-color: var(--clr-dark);
-        border-radius: 8px;
-    }
 
-    @media (min-width: 600px) {
-        .design-proc {
-            width: 70%;
-        }
+    /* Proj */
+    .mockup-img {
+        margin-bottom: 1rem;
     }
     
 
     @media (min-width: 600px) {
-        .research-grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
+        .cakeVid {
+            width: 25%;
         }
     }
+
   
-
-    .research-col {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 1rem;
-    }
-
-
-
-    .interview-container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-
-    @media (min-width:600px) {
-
-        .user-img,
-        .journey-img {
-            width: 70%;
-        }
-    }
-
-
-    .discover-section {
-        background-color: var(--clr-purple);
-        color: white;
-    }
-
-    .discover-section3 {
-        background-color: var(--clr-purple);
-        color: white;
-    }
-
-    .define-section2 {
-        background-color: var(--clr-purple);
-        color: white;
-    }
-
-    .deploy-section {
-        background-color: var(--clr-purple);
-        color: white;
-    }
-
-
-    @media (min-width: 600px) {
-
-        .site-img,
-        .wireframe-img,
-        .style-img {
-            width: 90%;
-            height: auto;
-        }
-    }
-
-    .deploy-img {
-        grid-area: img;
-        min-width: 600px;
-        position: relative;
-
-    }
-
-    @media (min-width: 600px) {
-        .deploy-container {
-            display: flex;
-            width: auto;
-            align-items: center;
-
+ .mockup-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-column-gap: 1rem;
 
         }
-    }
 
-    @media (min-width: 600px) {
-        .vid1 {
-            width: 70%;
-            height: auto;
-        }
-    }
+.intro-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
 
-    @media (min-width: 600px) {
-        .vid2 {
-            width: 60%;
-            height: auto;
-        }
-    }
+video {
+    width: 100%;
+    height: auto;
+}
+
+.research-section, .persona-section, .test-section {
+    background-color: var(--clr-purple);
+    color: white;
+}
