--- a/css/manooth.css
+++ b/css/manooth.css
@@ -89,6 +89,7 @@ strong {
     font-weight: var(--fw-bold);
     transition: transform 200ms ease-in-out;
     border-radius: 8px;
+    margin: 1rem;
 }
 
 .btn:hover {
@@ -268,11 +269,6 @@ header {
 }
 
 
-/* Proj */
-.btn-container {
-    text-align: center;
-}
-
 /* footer */
 
 .footer {
@@ -320,6 +316,10 @@ header {
 
 /* Project */
 
+.btn-container {
+    text-align: center;
+}
+
 
 .proj-header {
     width: 100%;
@@ -328,40 +328,7 @@ header {
     text-align: center;
 }
 
-.role-container {
-    display: flex;
-    flex-direction: column;
-}
 
-
-@media (min-width: 600px) {
-    .intro-container {
-        display: flex;
-        width: min-content;
-        margin: 1rem;
-        grid-column-gap: 1rem;
-        grid-template-areas:
-            "img title"
-            "img subtitle";
-        grid-template-columns: min-content;
-        align-items: center;
-
-
-    }
-
-    .intro2-section {
-        position: relative;
-        background-color: var(--clr-purple);
-        color: #fff;
-    }
-
-
-    .mockup1-img {
-        grid-area: img;
-        min-width: 600px;
-        position: relative;
-
-    }
 
     section {
         display: flex;
@@ -375,75 +342,29 @@ header {
         border-radius: 8px;
     }
 
-
-    @media (min-width: 600px) {
-        .design-proc {
-            width: 70%;
-        }
-    }
-    
-
-    @media (min-width: 600px) {
-        .research-grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-        }
-    }
-  
-
- 
-
-
-
-
-    @media (min-width:600px) {
-
-        .user-img,
-        .journey-img {
-            width: 70%;
-        }
+    .role-section, .final-section {
+        background-color: var(--clr-purple);
+        color: white;
     }
 
-
-
-
-    @media (min-width: 600px) {
-
-        .site-img,
-        .wireframe-img,
-        .style-img {
-            width: 90%;
-            height: auto;
-        }
+    .app-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr))
     }
 
-    .deploy-img {
-        grid-area: img;
-        min-width: 600px;
-        position: relative;
-
+    .app-img {
+        padding: 1rem;
     }
 
     @media (min-width: 600px) {
-        .deploy-container {
-            display: flex;
-            width: auto;
-            align-items: center;
-
-
+        .manoothVid {
+            width: 30%;
         }
     }
 
-    @media (min-width: 600px) {
-        .vid1 {
-            width: 70%;
-            height: auto;
-        }
-    }
+video {
+    width: 100%;
+    height: auto;
+}
 
-    @media (min-width: 600px) {
-        .vid2 {
-            width: 60%;
-            height: auto;
-        }
-    }
+
