--- a/css/ui.css
+++ b/css/ui.css
@@ -270,6 +270,13 @@ header {
 
 
 
+.proj-header {
+    width: 100%;
+    color: white;
+    padding: 2rem;
+    text-align: center;
+}
+
 
 /* footer */
 
@@ -319,31 +326,6 @@ header {
 /* Project */
 
 
-.proj-header {
-    width: 100%;
-    color: white;
-    padding: 2rem;
-    text-align: center;
-}
-
-
-
-@media (min-width: 600px) {
-    .intro-container {
-        display: flex;
-        width: min-content;
-        margin: 1rem;
-        grid-column-gap: 1rem;
-        grid-template-areas:
-            "img title"
-            "img subtitle";
-        grid-template-columns: min-content;
-        align-items: center;
-
-
-    }
-
-
     section {
         display: flex;
         flex-direction: column;
@@ -356,64 +338,23 @@ header {
         border-radius: 8px;
     }
 
-    @media (min-width: 600px) {
-        .design-proc {
-            width: 70%;
-        }
+   
+
+    .photo-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     }
-    
 
-    @media (min-width: 600px) {
-        .research-grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-        }
+    .ui-img {
+        padding: 1rem;
     }
-  
-
-
 
     @media (min-width:600px) {
-
-        .user-img,
-        .journey-img {
-            width: 70%;
+        .logo-img {
+            width: 75%;
         }
     }
 
-
-
-
-    @media (min-width: 600px) {
-
-        .site-img,
-        .wireframe-img,
-        .style-img {
-            width: 90%;
-            height: auto;
-        }
-    }
-
-    @media (min-width: 600px) {
-        .deploy-container {
-            display: flex;
-            width: auto;
-            align-items: center;
-
-
-        }
-    }
-
-    @media (min-width: 600px) {
-        .vid1 {
-            width: 70%;
-            height: auto;
-        }
-    }
-
-    @media (min-width: 600px) {
-        .vid2 {
-            width: 60%;
-            height: auto;
-        }
+    .main-container {
+        text-align: center;
     }
