--- a/css/cake.css
+++ b/css/cake.css
@@ -88,6 +88,7 @@ strong {
     letter-spacing: 2px;
     font-weight: var(--fw-bold);
     transition: transform 200ms ease-in-out;
+    border: none;
 }
 
 .btn:hover {
@@ -372,3 +373,14 @@ video {
     background-color: var(--clr-purple);
     color: white;
 }
+
+/* Responsive for extra large screen */
+@media (min-width: 1281px) {
+    section {
+        padding: 2rem 24rem;
+    }
+    .overview {
+        padding: 1rem 1rem;
+    }
+}
+
