--- a/css/lyrically.css
+++ b/css/lyrically.css
@@ -57,7 +57,7 @@ body {
 }
 
 section {
-    padding: 2em 2em;
+    padding: 1em 2em;
 }
 
 img {
@@ -76,6 +76,7 @@ strong {
 
 /* Buttons */
 
+
 .btn {
     display: inline-block;
     padding: .5em 2.5em;
@@ -88,6 +89,8 @@ strong {
     letter-spacing: 2px;
     font-weight: var(--fw-bold);
     transition: transform 200ms ease-in-out;
+    border-radius: 8px;
+    border: none;
 }
 
 .btn:hover {
@@ -330,163 +333,144 @@ header {
     text-align: center;
 }
 
-.role-container {
+
+
+
+/* .role-container {
     display: flex;
     flex-direction: column;
-}
+    background-color: powderblue;
+    width: 100%;
+} */
 
 
-@media (min-width: 600px) {
-    .intro-container {
+/* @media (min-width: 600px) {
+    .intro2-section {
         display: flex;
-        width: min-content;
-        margin: 1rem;
-        grid-column-gap: 0rem;
+        flex-direction: row;
+        width: 100%;
         grid-template-areas:
             "img title"
             "img subtitle";
-        grid-template-columns: min-content;
-        align-items: center;
-    }
+        grid-template-columns: min-content; */
 
-    @media (min-width:600px) {
-        .role-container {
-            padding: 2rem;
-            margin: 1rem;
-        }
-    }
+.mockup1-img,
+.deploy-img {
+    width: 100%;
+}
 
 
-    .intro2-section {
-        position: relative;
-        background-color: var(--clr-purple);
-        color: #fff;
-    }
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.design-proc {
+    border: 1px solid var(--clr-dark);
+    background-color: var(--clr-dark);
+    border-radius: 8px;
+}
 
 
-    .mockup1-img {
-        grid-area: img;
-        min-width: 600px;
-        position: relative;
+.research-col {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1rem;
+}
 
-    }
+.interview-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
 
+.discover-section,
+.discover-section3,
+.define-section2,
+.deploy-section {
+    background-color: var(--clr-purple);
+    color: white;
+}
+
+.img-mockup {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+}
+
+/* Media Quesries */
+
+/* Responsive for extra large screen */
+@media (min-width: 1281px) {
     section {
+        padding: 2rem 24rem;
+    }
+    .role-p {
+        text-align: center;
+    }
+}
+
+@media (min-width: 1000px) {
+
+    .mockup1-img,
+    .deploy-img {
+        width: 45%;
+    }
+}
+
+/* Responsive for tablet */
+@media (min-width: 768px) and (max-width: 1000px) {
+
+    .intro-container,
+    .deploy-container {
         display: flex;
         flex-direction: column;
-        align-items: center;
     }
 
+    .role-container {
+        text-align: center;
+    }
+}
+
+@media (min-width: 600px) {
     .design-proc {
-        border: 1px solid var(--clr-dark);
-        background-color: var(--clr-dark);
-        border-radius: 8px;
+        width: 70%;
     }
-
-    @media (min-width: 600px) {
-        .design-proc {
-            width: 70%;
-        }
-    }
-    
-
-    @media (min-width: 600px) {
-        .research-grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-        }
-    }
-  
-
-    .research-col {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 1rem;
-    }
-
-
-
-    .interview-container {
+    .research-grid {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
-
-
-    @media (min-width:600px) {
-
-        .user-img,
-        .journey-img {
-            width: 70%;
-        }
+    .user-img,
+    .journey-img {
+        width: 70%;
     }
-
-
-    .discover-section {
-        background-color: var(--clr-purple);
-        color: white;
+    .site-img,
+    .wireframe-img,
+    .style-img {
+        width: 90%;
+        height: auto;
     }
-
-    .discover-section3 {
-        background-color: var(--clr-purple);
-        color: white;
+    .deploy-container {
+        display: flex;
+        width: auto;
+        align-items: center;
     }
-
-    .define-section2 {
-        background-color: var(--clr-purple);
-        color: white;
+    .vid1 {
+        width: 70%;
+        height: auto;
     }
-
-    .deploy-section {
-        background-color: var(--clr-purple);
-        color: white;
+    .vid2 {
+        width: 60%;
+        height: auto;
     }
+}
 
-
-    @media (min-width: 600px) {
-
-        .site-img,
-        .wireframe-img,
-        .style-img {
-            width: 90%;
-            height: auto;
-        }
+@media (min-width: 1000px) {
+    .intro-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
     }
-
-    .deploy-img {
-        grid-area: img;
-        min-width: 600px;
-        position: relative;
-
-    }
-
-    @media (min-width: 600px) {
-        .deploy-container {
-            display: flex;
-            width: auto;
-            align-items: center;
-
-
-        }
-    }
-
-    @media (min-width: 600px) {
-        .vid1 {
-            width: 70%;
-            height: auto;
-        }
-    }
-
-    @media (min-width: 600px) {
-        .vid2 {
-            width: 60%;
-            height: auto;
-        }
-    }
-
-    .img-mockup {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      grid-column-gap: 1rem;
-      grid-row-gap: 1rem;
-    }
+}
