--- a/css/manooth.css
+++ b/css/manooth.css
@@ -78,7 +78,7 @@ strong {
 
 .btn {
     display: inline-block;
-    padding: .5em 2.5em;
+    padding: 1rem 1rem;
     background: var(--clr-orange);
     color: black;
     text-decoration: none;
@@ -90,6 +90,7 @@ strong {
     transition: transform 200ms ease-in-out;
     border-radius: 8px;
     margin: 1rem;
+    border: none;
 }
 
 .btn:hover {
@@ -375,6 +376,15 @@ video {
     height: auto;
 }
 
-
-
+@media (min-width: 600px) {
+    .media-img {
+        width: 50%;
+    }
+}
+/* Responsive for extra large screen */
+@media (min-width: 1281px) {
+    section {
+        padding: 2rem 24rem;
+    }
+}
 
