carousel added to CM

--- a/css/cake.css
+++ b/css/cake.css
@@ -192,6 +192,7 @@ header {
     align-items: center;
     margin: 0;
     padding: 0;
+    width: 100%;
 }
 
 .nav__link {
@@ -203,6 +204,10 @@ header {
 
 .nav__link:hover {
     color: var(--clr-orange);
+}
+
+.nav-toggle:focus {
+    outline: 3px solid var(--clr-orange);
 }
 
 .nav-toggle {
@@ -369,11 +374,6 @@ header {
     }
     
 
-    @media (min-width: 600px) {
-        .cakeVid {
-            width: 25%;
-        }
-    }
 
   
  .mockup-container {
@@ -398,6 +398,12 @@ video {
     color: white;
 }
 
+/* carousel indicators */
+.carousel-control-next,
+.carousel-control-prev {
+    filter: invert(100%);
+}
+
 /* Responsive for extra large screen */
 @media (min-width: 1281px) {
     section {
@@ -408,3 +414,13 @@ video {
     }
 }
 
+@media (min-width:1000px) {
+    .carousel {
+        width: 60%;
+}
+
+@media (min-width: 600px) {
+    .cakeVid {
+        width: 25%;
+    }
+}
